@@ -1,3 +1,7 @@
+=== master
+
+* Fix CICPHash#to_s to operate like #inspect on Ruby 1.9+ (jeremyevans)
+
 === 2.0.0 (2021-12-10)
 
 * Support new Hash instance methods added in 1.9 - 3.0 (jeremyevans)
